--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+        <!--
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,6 +6,8 @@
         <title>Teste Sockets</title>
     </head>
     <body>
+
+
 
                 <div id="titulo"></div>
 
@@ -41,4 +44,4 @@ var socket = io('http://localhost:3000');
     
         </script>
     </body>
-</html>
+</html>-->
